--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,7 @@ html {
 }
 
 .sidebar-btn {
-  @apply p-2 xl:px-4 flex justify-center xl:justify-start items-center font-bold hover:bg-gray-200/75 dark:hover:bg-[#fof3bd] border-2 border-transparent rounded-xl;
+  @apply p-2 xl:px-4 flex justify-center xl:justify-start items-center font-bold hover:bg-gray-200/75 dark:hover:bg-slate-700 border-2 border-transparent rounded-xl;
 }
 
 .sidebar-btn-icon {
@@ -41,7 +41,7 @@ html {
 }
 
 .sidebar-btn.active {
-  @apply bg-[#02c39a] border-2 border-[#02c39a] text-white dark:bg-transparent dark:text-red-400 dark:border-red-400 dark:bg-slate-700;
+  @apply bg-red-100 border-2 border-red-300 text-red-500 dark:bg-transparent dark:text-red-400 dark:border-red-400 dark:bg-slate-700;
 }
 
 .sidebar-text {
